# SimpleSyrup

./: .gitignore  .releaserc.cjs  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  __init__.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test_helpers.py  tsconfig.json  vitest.config.ts
scripts/: update-release-versions.mjs
simple_syrup/: __init__.py
tests/: conftest.py  test_a1111_sampling.py  test_anima_loader.py  test_auto_model_cache.py  test_auto_model_resolver.py  test_batch_region_conditioning_node.py  test_batch_region_conditioning_v3_node.py  test_batch_segs_node.py  test_batch_segs_v3_node.py  test_bert_resolver.py  test_checkpoint_loader.py  test_conditioning_batch.py  test_conditioning_batch_pack_node.py  test_detail_geometry.py  test_detail_masks.py  test_detail_previews.py  test_detail_resize.py  test_detail_segs_as_regions_node.py  test_detail_segs_as_regions_service.py  test_detail_segs_by_scale_factor_node.py  test_detail_segs_by_scale_factor_service.py  test_detail_segs_by_scale_factor_tiled_diffusion_node.py  test_detail_segs_by_scale_factor_tiled_diffusion_service.py  test_detect_segs_with_ultralytics_node.py  test_detector_compat.py  test_encode_prompt_batch_node.py  test_encode_prompt_batch_with_prompt_control_node.py  test_external_llm_client.py  test_external_llm_images.py  test_external_llm_keyring.py  test_external_llm_prompt_node.py  test_external_llm_prompt_service.py  test_external_llm_prompt_v3_node.py  test_external_llm_routes.py  test_external_llm_segs_images.py  test_graph_provenance.py  test_grounded_sam_model_info_node.py  test_grounding_dino_bert_adapter.py  test_grounding_dino_loader.py  (+90 more)
tools/: __init__.py  (+1 more)
(+153 files in other folders)
